contextkit (0.4~unreleased) unstable; urgency=low

  * Subscriber part of libcontextsubscriber now supports multiple
    providers for one property.
  * Support both the old and the new ContextKit D-Bus protocol in
    libcontextsubscriber.

  Implemented: SWP#CntFr-349

 -- Gergely Risko <gergely+context@risko.hu>  Thu, 22 Oct 2009 13:42:27 +0300

contextkit (0.3.10) unstable; urgency=low

  * Introspection part of libcontextsubscriber now supports multiple
    providers for one property.
  * New tool: context-ls for listing available context properties.

  Implemented: SWP#CntFr-324, SWP#CntFr-318, SWP#CntFr-343

 -- Marja Hassinen <ext-marja.2.hassinen@nokia.com>  Tue, 15 Oct 2009 16:25:04 +0300

contextkit (0.3.9) unstable; urgency=low

  * Parsing provider declarations with a nano dom parser which recognizes complex types.
  * Removed complex types from core.context, since they're not
    supported yet.

  Implemented: SWP#CntFr-337, SWP#CntFr-203

 -- Marja Hassinen <ext-marja.2.hassinen@nokia.com>  Tue, 06 Oct 2009 15:00:00 +0300

contextkit (0.3.8) unstable; urgency=low

  * libcontextsubscriber-tests lintian errors fixed.
  * Rewrote context-provide in C++, the UI has been changed, see
    context-provide-v2(1).
  * New package libcontextprovider-tests added, containing customer tests
    of the libcontextprovider.

  Implemented: SWP#CntFr-323

 -- Gergely Risko <gergely+context@risko.hu>  Mon, 05 Oct 2009 09:02:50 +0300

contextkit (0.3.7) unstable; urgency=low

  * Added a const promise to context_provider_install_group's first
    parameter in libcontextprovider C API.
  * Added cltool.py to python-contextkit, this is a tool for test writers,
    to make it easier to communicate with context-listen from python
    scripts.
  * Refactorings in libcontextprovider Qt API, should get rid of some race
    conditions; setConnection in Service is deprecated.
  * libcontextsubscriber's pkg-config file has been fixed, private