@@ -64,7 +64,7 @@ by the \fIFILENAME\fR, the default is 'context-provide.context' in the
 current directory.
 .TP
 \fBstart\fR
-try publish the \fIBUSNAME\fR of the provider on D-Bus, exit if it fails.
+try to (re)publish the \fIBUSNAME\fR of the provider on D-Bus, exit if it fails.
 .TP
 \fBexit\fR
 exit from the program.
